@@ -1,2 +1,62 @@
 # Bronco-Banking-An-ATM-System
 ATM Simulation
+
+-----------------------------------------------------------------------------------------------------------------------------------------
+This project was done by former students of the California State Polytechnic University in Pomona(Cal Poly Pomona).
+The students were: Mark Barros (Project Manager), Rosalinda Chamale, Anthony Zhang, Dexxer Medina, and Anthony Sepulveda.
+They were all enrolled in Professor T. Damavandi's Object-Oriented Design and Programming course (CS 3560-03) during the Spring of 2021.
+The project was worked on by the students during the COVID lockdown. The collaboration was performed via Discord and GitHub.
+-----------------------------------------------------------------------------------------------------------------------------------------
+The project is called, "Bronco Banking: An ATM System", and is an ATM simulation.
+
+The simulation allows for students to make the following transactions:
+
+	* Deposit Money
+	* Withdraw Money
+	* Transfer Money
+
+The simulation allows for bank operators to monitor the following:
+
+	* The Customers
+	* The Accounts
+	* The Transactions
+
+Additional incorporated functionality:	
+  * The insertion of a bank card was simulated by allowing the user to click on an image of a card.
+  * Should a student input the wrong password three times he/she will be locked out.
+  * A bank operator has the power to freeze or unfreeze a student's account.
+-----------------------------------------------------------------------------------------------------------------------------------------
+The following was used to do the project:
+	* Java (programming language)
+	* JavaFX (set of JARs necessary for GUI projects)
+	* Scene Builder (application for designing GUIs)
+	* Eclipse IDE (environment for developing Java projects)
+	* MySQL (relational management database system)
+	* Git (version control system)
+	* GitHub (Internet hosting service for software development and version control using Git)
+-----------------------------------------------------------------------------------------------------------------------------------------
+The code for project is located in src/application/bin.
+The icons for the project are in src/application/icons.
+The diagrams associated with the project are in Diagrams.
+The slide presentation associated with the project is in Slide Presentation.
+Screenshots of the running application, code base open in Eclipse, the database opened in MySQL,
+and the application's windows open in Scene Builder are in their respective folders.
+-----------------------------------------------------------------------------------------------------------------------------------------
+Because the application requires it be connected to a database, one must be setup and run on the local host:
+     * A schema named "atm-db" must be created
+     * The Username must be "root"
+     * The Password must be "l9*K7&g6^D5%"
+
+The following three files are used to build the database from scratch and are in ATM Database/:	 
+     * "atm-db Workbench Model.mwb" (the schema structure)
+     * "atm-db Builder SQL Script.sql" (SQL script for building the schema)
+     * "Add All Records to atm-db SQL Script.sql" (SQL script for populating the schema with dummy data)
+-----------------------------------------------------------------------------------------------------------------------------------------
+For the project to function within Eclipse the following steps must be taken:
+     * The e(fx)clipse plugin must be installed.
+     * The mysql-connector-java-8.0.23.jar must be installed.
+     * The JavaFX library must be installed.
+	 * The location to the JavaFX jars must be added to the Classpath.
+	 * The following VM argument must be added:
+          --module-path "C:\your path\lib" --add-modules javafx.controls,javafx.fxml
+-----------------------------------------------------------------------------------------------------------------------------------------
